# sea-orm

./: .gitignore  Cargo.toml
examples/cloudflare_d1_worker/: Cargo.toml  README.md  wrangler.toml
examples/cloudflare_d1_worker/src/: lib.rs
examples/cloudflare_d1_worker/src/entity/: post.rs  user.rs
examples/cloudflare_d1_worker/src/migration/: m20260104_000001_create_users_table.rs  m20260104_000002_create_posts_table.rs  mod.rs
sea-orm-cli/: Cargo.toml
sea-orm-migration/: Cargo.toml
sea-orm-migration/src/: manager.rs  migrator.rs
sea-orm-migration/src/migrator/: queries.rs
src/database/: db_connection.rs  mod.rs  transaction.rs
src/database/stream/: query.rs  transaction.rs
src/driver/: mod.rs  sqlx_d1.rs
src/entity/: active_model.rs
src/executor/: execute.rs  query.rs
tests/common/features/: custom_active_model.rs
